Add public app endpoint (#15)
* Add public app endpoint

* fix create app

* fix swag

* Fix oauth flow code

* Fix oauth flow code

* add test
